--- a/main.html
+++ b/main.html
@@ -77,6 +77,8 @@
                 bulk of the card's content.
             </p>
             <a class="btn btn-primary card-href">Read more ...</a>
+            <i class="material-icons" id="save-" onclick="">bookmark_border</i>
+
         </div>
     </div>
 </template>
