--- a/index.html
+++ b/index.html
@@ -47,12 +47,29 @@
    <nav id="navbarPlaceholder"></nav> 
 
     <!-- the body of your page goes here -->
-    <div class="container text-center">
+    <!-- <div class="container text-center">
         <img class="d-block mx-auto mb-4 responsive" src="./images/elmo.jpg" alt=""  height="200">
         <h1>Welcome to Bavneets's Hiking App</h1>
         <a href="login.html" class="btn btn-info" role="button">Log in</a>
    </div>
 
+   <div class="px-4 pt-5 my-5 text-center border-bottom">
+    <div class="overflow-hidden" style="max-height: 30vh;">
+        <div class="container px-5">
+            <img src="images/elmo.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image"
+                width="200" height="200" loading="lazy">
+        </div>
+    </div> -->
+    <h1 class="display-4 fw-bold">Doggy Treats</h1>
+    <img class="d-block mx-auto mb-4 responsive" src="./images/elmo.jpg" alt=""  height="50%" width="auto">
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4"><b>This app allows you to enter your dogs personality traits and breed to get a list of custom treats</b> </p>
+        <p class="lead mb-4">This app is dedicated to my favourite dog, rambo. He works tirelessly to protect the cattle farms up in the BC interior </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Login/Signup</button>
+        </div>
+    </div>
+</div>
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav> 
 
